[gd_scene load_steps=15 format=3 uid="uid://7mr713o2jjms"]

[ext_resource type="Script" path="res://chess_pieces/chess_piece.gd" id="1_vmmdw"]
[ext_resource type="Shader" path="res://shaders/selected_chess_piece.gdshader" id="2_lrvyw"]
[ext_resource type="AudioStream" uid="uid://cfetd1g6xfmy" path="res://chess_pieces/move-self.mp3" id="3_if5gp"]
[ext_resource type="Texture2D" uid="uid://j2e58q86upp8" path="res://chess_pieces/textures/spritesheet.png" id="3_sgq0g"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cuntc"]
resource_local_to_scene = true
shader = ExtResource("2_lrvyw")
shader_parameter/color = Color(1, 0.8, 0, 1)
shader_parameter/width = 5.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = false
shader_parameter/active = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ec586"]
shader = ExtResource("2_lrvyw")
shader_parameter/color = Color(1, 0.8, 0, 1)
shader_parameter/width = 2.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/active = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gvtph"]
size = Vector2(64, 64)

[sub_resource type="Animation" id="Animation_msegy"]
length = 0.001

[sub_resource type="Animation" id="Animation_3vvie"]
resource_name = "not_selected"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}

[sub_resource type="Animation" id="Animation_fpu6k"]
resource_name = "selected"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1.31951),
"update": 1,
"values": [SubResource("ShaderMaterial_ec586")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g6p3y"]
_data = {
"RESET": SubResource("Animation_msegy"),
"not_selected": SubResource("Animation_3vvie"),
"selected": SubResource("Animation_fpu6k")
}

[sub_resource type="Animation" id="Animation_5mta5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [7.45058e-09]
}

[sub_resource type="Animation" id="Animation_dwsjh"]
resource_name = "wobble"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.5),
"transitions": PackedFloat32Array(4.43828, 1, 0.63728, 1),
"update": 0,
"values": [0.785398, 7.45058e-09, -0.785398, 7.45058e-09]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3gghr"]
_data = {
"RESET": SubResource("Animation_5mta5"),
"wobble": SubResource("Animation_dwsjh")
}

[node name="ChessPiece" type="Node2D"]
use_parent_material = true
script = ExtResource("1_vmmdw")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_cuntc")
position = Vector2(1.90735e-06, -3.8147e-06)
scale = Vector2(0.46875, 0.46875)
texture = ExtResource("3_sgq0g")
hframes = 12

[node name="Area2D" type="Area2D" parent="."]
material = SubResource("ShaderMaterial_ec586")
position = Vector2(1.90735e-06, 8)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_gvtph")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_if5gp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g6p3y")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3gghr")
}

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_shape_entered" from="Area2D" to="." method="_on_area_2d_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="Area2D" to="." method="_on_area_2d_mouse_shape_exited"]
